--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ circle {
       <li>D3 Examples: <a href="http://bl.ocks.org/mbostock">Mike Bostock (Creater of D3)</a></li>
       <li>Interactive Visualization: <a href="http://worrydream.com/LadderOfAbstraction/">Laddder of Abstraction</a></li>
     </ul>
-  <br>These slides available at <a href="https://github.com/edeno/CNSO-D3-Presentation">https://github.com/edeno/CNSO-D3-Presentation</a>
+  <br>These slides available at <a href="http://edeno.github.io/CNSO-D3-Presentation">http://edeno.github.io/CNSO-D3-Presentation</a>
 </section>
 
 <script src="d3.v3.min.js"></script>
